# llm-cpp

./: .gitignore  CMakeLists.txt  README.md  chat.cpp  gemm.h  make_lite_weight.py  qwen2_layers.h  qwen2_model.h  run.sh  test.cpp  test.py  tokenizer.h  utils.h
android/: local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/tencent/makeup/: MainActivity.java  StableDiffusion.java
android/app/src/main/jni/: CMakeLists.txt  makeup_jni.cpp  tokenizer.h  utils.h
android/app/src/main/res/layout/: main.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
